--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
-    "mongoose": "^7.2.0"
+    "mongoose": "^7.2.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "bcryptjs": "^2.4.3",
