--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
+    "netlify-lambda": "^2.0.16",
+    "serverless-http": "^3.2.0",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
